--- a/src/App.css
+++ b/src/App.css
@@ -128,11 +128,16 @@ body {
   font-size: var(--fs-default);
   color: var(--c-black);
   line-height: 1;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial,
-    'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
-    'Noto Color Emoji';
+  font-family: 'TossFaceFont', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   width: 100vw;
   height: 100vh;
+}
+
+@font-face {
+  font-family: 'TossFaceFont';
+  src: url('./assets/font/TossFaceFontWeb.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
 }
